# firefox

./: .gitignore  .mcp.json  .prettierignore  .taskcluster.yml  AGENTS.md  CLOBBER  Cargo.toml  build.gradle  mots.yaml  moz.build  package-lock.json  package.json  stylelint-rollouts.config.js
.cargo/: config.toml.in
.codex/: config.toml
accessible/: metrics.yaml
browser/: moz.build
caps/: nsScriptSecurityManager.cpp
chrome/: nsChromeRegistry.h
config/: config.mk  milestone.txt  system-headers.mozbuild
dom/: metrics.yaml
dom/base/: Attr.cpp  (+50 more)
gfx/: metrics.yaml
gradle/: libs.versions.toml
image/: ImageUtils.cpp  OrientedImage.cpp  imgFrame.h  imgLoader.cpp  imgRequest.cpp
js/: moz.configure
mfbt/: Assertions.h  HashTable.h  api.yml  moz.build
netwerk/: metrics.yaml
remote/: jar.mn  moz.build
security/lockstore/lockstore_rs/: Cargo.toml
security/lockstore/lockstore_rs/src/: crypto.rs  datastore.rs  keystore.rs  lib.rs
security/lockstore/lockstore_rs/tests/: crypto_tests.rs  datastore_tests.rs  keystore_tests.rs
startupcache/: StartupCache.cpp  StartupCache.h
storage/: ObfuscatingVFS.cpp  mozStorageConnection.cpp  mozStorageConnection.h  mozStoragePrivateHelpers.cpp
supply-chain/: audits.toml  config.toml
taskcluster/: config.yml
toolkit/: moz.configure
widget/: BasicEvents.h  EventForwards.h  GfxInfoFeatureDefs.inc  PuppetWidget.cpp  PuppetWidget.h  TextEvents.h  Theme.cpp  TouchEvents.h  WidgetEventImpl.cpp  WidgetMessageUtils.h  nsBaseFilePicker.cpp  nsFilePickerProxy.cpp  nsGUIEventIPC.h  nsIWidget.h
xpcom/: metrics.yaml
(+3596 files in other folders)
